--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -24,6 +24,7 @@
     "consistent-return": "off",
     "no-useless-return": "off",
     "no-console": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "import/no-cycle": "off"
   }
 }
