--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -25,6 +25,8 @@
     "no-useless-return": "off",
     "no-console": "off",
     "no-underscore-dangle": "off",
-    "import/no-cycle": "off"
+    "import/no-cycle": "off",
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/label-has-for": "off"
   }
 }
