--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -27,6 +27,7 @@
     "no-underscore-dangle": "off",
     "import/no-cycle": "off",
     "jsx-a11y/label-has-associated-control": "off",
-    "jsx-a11y/label-has-for": "off"
+    "jsx-a11y/label-has-for": "off",
+    "react/forbid-prop-types": "off"
   }
 }
