--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "date-fns": "^2.0.0-alpha.27",
     "history": "^4.9.0",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-datepicker": "^2.5.0",
