update env and add redis envs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,6 +18,11 @@ DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=adonis
 
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=null
+
 SMTP_HOST=smtp.mailtrap.io
 MAIL_USERNAME=
 MAIL_PASSWORD=
